complete edit mode and create form component

--- a/CarRentalManagement/Client/Pages/Models/Index.razor
+++ b/CarRentalManagement/Client/Pages/Models/Index.razor
@@ -8,13 +8,19 @@
 <hr />
 <br />
 
+<a href="/models/create" class="btn btn-dark">
+    <span class="oi oi-plus"></span>
+    Create Model
+</a>
+
+
 @if (Models == null)
 {
     <div class="alert alert-info">loading ...</div>
 }
 else
 {
-    <table class="table table-responsive ">
+    <table class="table  ">
         <thead>
         <tr>
             <th>Name</th>
