--- a/CarRentalManagement/Client/Pages/Bookings/Index.razor
+++ b/CarRentalManagement/Client/Pages/Bookings/Index.razor
@@ -8,13 +8,18 @@
 <hr />
 <br />
 
+<a href="/bookings/create" class="btn btn-dark">
+    <span class="oi oi-plus"></span>
+    Create Booking
+</a>
+
 @if (Bookings == null)
 {
     <div class="alert alert-info">loading ...</div>
 }
 else
 {
-    <table class="table table-responsive ">
+    <table class="table ">
         <thead>
             <tr>
                 <th>Customer Tax Id</th>
