--- a/CarRentalManagement/Client/Pages/Colours/Index.razor
+++ b/CarRentalManagement/Client/Pages/Colours/Index.razor
@@ -1,6 +1,5 @@
 ﻿@inject IJSRuntime js
 @page "/colours/"
-@using System.Net
 
 @attribute [Authorize]
 @inject HttpClient _client
@@ -8,13 +7,18 @@
 <hr />
 <br />
 
+<a href="/colours/create" class="btn btn-dark">
+    <span class="oi oi-plus"></span>
+    Create Color
+</a>
+
 @if (Colours == null)
 {
     <div class="alert alert-info">loading ...</div>
 }
 else
 {
-    <table class="table table-responsive ">
+    <table class="table  ">
         <thead>
             <tr>
                 <th>Name</th>
