--- a/CarRentalManagement/Client/Pages/Customers/Index.razor
+++ b/CarRentalManagement/Client/Pages/Customers/Index.razor
@@ -1,6 +1,6 @@
 ﻿@inject IJSRuntime js
 @page "/customers/"
-@using System.Net
+
 
 @attribute [Authorize]
 @inject HttpClient _client
@@ -8,13 +8,18 @@
 <hr />
 <br />
 
+<a href="/customers/create" class="btn btn-dark">
+    <span class="oi oi-plus"></span>
+    Create Customer
+</a>
+
 @if (Customers == null)
 {
     <div class="alert alert-info">loading ...</div>
 }
 else
 {
-    <table class="table table-responsive ">
+    <table class="table ">
         <thead>
             <tr>
                 <th>Tax Id</th>
