--- a/CarRentalManagement/Client/Pages/Makes/Index.razor
+++ b/CarRentalManagement/Client/Pages/Makes/Index.razor
@@ -8,13 +8,18 @@
 <hr />
 <br />
 
+<a href="/makes/create" class="btn btn-dark">
+    <span class="oi oi-plus"></span>
+    Create Makes
+</a>
+
 @if (Makes == null)
 {
     <div class="alert alert-info">loading ...</div>
 }
 else
 {
-    <table class="table table-responsive ">
+    <table class="table  ">
         <thead>
             <tr>
                 <th>Name</th>
