--- a/CarRentalManagement/Client/Pages/Vehicles/Index.razor
+++ b/CarRentalManagement/Client/Pages/Vehicles/Index.razor
@@ -4,9 +4,15 @@
 
 @attribute [Authorize]
 @inject HttpClient _client
-<h3 class="card-title">Customers</h3>
+<h3 class="card-title">Vehicles</h3>
 <hr />
 <br />
+
+<a href="/vehicles/create" class="btn btn-dark">
+    <span class="oi oi-plus"></span>
+    Create Vehicle
+</a>
+
 
 @if (Vehicles == null)
 {
@@ -14,7 +20,7 @@
 }
 else
 {
-    <table class="table table-responsive ">
+    <table class="table  ">
         <thead>
             <tr>
                 <th>Make</th>
