--- a/CarRentalManagement/Client/Pages/Colours/FormComponent.razor
+++ b/CarRentalManagement/Client/Pages/Colours/FormComponent.razor
@@ -8,12 +8,18 @@
             <ValidationMessage For="@(() => color.Name)" />
         </div>
     </div>
-
-    <button type="submit" class="btn btn-success btn-block">@ButtonText</button>
+    
+    @if (!Disabled)
+    {
+        <button type="submit" class="btn btn-success btn-block">@ButtonText</button>
+    }
+    <BackToList Target="colours"/>
 
 </EditForm>
 
 @code {
+    [Parameter]
+    public bool Disabled { get; set; }
     [Parameter]
     public Colour color { get; set; }
     [Parameter]
