--- a/CarRentalManagement/Client/Pages/Colours/View.razor
+++ b/CarRentalManagement/Client/Pages/Colours/View.razor
@@ -1,10 +1,10 @@
-﻿@page "/colours/edit/{id:int}"
+﻿@page "/colours/view/{id:int}"
 @using CarRentalManagement.Client.Services
 @inject NavigationManager _navigationManager
 @inject HttpClient _client
 @inject HttpInterceptorService _interceptor;
 
-<FormComponent color="@color" OnValidSubmit="@EditMake" ButtonText="Edit"/>
+<FormComponent color="@color" Disabled="true"/>
 
 
 @code {
@@ -12,17 +12,9 @@
     public int id { get; set; }
     Colour color = new Colour();
 
-    
     protected override async Task OnParametersSetAsync()
     {
         _interceptor.MonitorEvent();
         color = await _client.GetFromJsonAsync<Colour>($"{Endpoints.ColoursEndpoint}/{id}");
-    }
-
-    async Task EditMake()
-    {
-        _interceptor.MonitorEvent();
-        await _client.PutAsJsonAsync($"{Endpoints.ColoursEndpoint}/{id}", color);
-        _navigationManager.NavigateTo("/colours/");
     }
 }
