--- a/CarRentalManagement/Client/Pages/Customers/Create.razor
+++ b/CarRentalManagement/Client/Pages/Customers/Create.razor
@@ -1,19 +1,21 @@
 ﻿@page "/customers/create/"
+@using CarRentalManagement.Client.Services
 @inject NavigationManager _navigationManager
 @inject HttpClient _client
+@inject HttpInterceptorService _interceptor;
 
-<h3 class="card-title">Create New Customer</h3>
-<hr />
-<br />
+<HeadingComponent Text="Create New Customer"/>
+
 
 <FormComponent customer="@customer" OnValidSubmit="@OnValidSubmit" ButtonText="Create" ></FormComponent>
-<BackToList Target="customers"/>
+
 @code {
 
     Customer customer = new Customer();
 
     private async Task OnValidSubmit()
     {
+        _interceptor.MonitorEvent();
         await _client.PostAsJsonAsync(Endpoints.CustomersEndpoint, customer);
         _navigationManager.NavigateTo("/customers/");
     }
