--- a/CarRentalManagement/Client/Pages/Customers/Index.razor
+++ b/CarRentalManagement/Client/Pages/Customers/Index.razor
@@ -1,12 +1,14 @@
 ﻿@inject IJSRuntime js
 @page "/customers/"
+@using CarRentalManagement.Client.Services
 
 
 @attribute [Authorize]
 @inject HttpClient _client
-<h3 class="card-title">Customers</h3>
-<hr />
-<br />
+@inject HttpInterceptorService _interceptor;
+
+<HeadingComponent Text="Customers"/>
+
 
 <a href="/customers/create" class="btn btn-dark">
     <span class="oi oi-plus"></span>
@@ -22,7 +24,7 @@ else
     <table class="table ">
         <thead>
             <tr>
-                <th>Tax Id</th>
+                <th>Full Name</th>
                 <th>Contact Number</th>
                 <th>Email Address</th>
                 <th>Actions</th>
@@ -32,7 +34,7 @@ else
             @foreach (var customer in Customers)
             {
                 <tr>
-                    <td>@customer.TaxId</td>
+                    <td>@customer.FirstName @customer.LastName</td>
                     <td>@customer.ContactNumber</td>
                     <td>@customer.EmailAddress</td>
                     <td>
@@ -56,8 +58,10 @@ else
 
 @code {
     private List<Customer> Customers;
+    
     protected override async Task OnInitializedAsync()
     {
+        _interceptor.MonitorEvent();
         Customers = await _client.GetFromJsonAsync<List<Customer>>(Endpoints.CustomersEndpoint);
     }
 
@@ -68,10 +72,13 @@ else
         var confirm = await js.InvokeAsync<bool>("confirm", $"Do you want to delete {make.EmailAddress}?");
         if (confirm)
         {
+            _interceptor.MonitorEvent();
             await _client.DeleteAsync($"{Endpoints.CustomersEndpoint}/{id}");
             Customers.Remove(make);
             //await OnInitializedAsync();
         }
     }
+
+
 
 }
