--- a/CarRentalManagement/Client/Pages/Makes/FormComponent.razor
+++ b/CarRentalManagement/Client/Pages/Makes/FormComponent.razor
@@ -1,19 +1,27 @@
 ﻿<EditForm Model="@make" OnValidSubmit="@OnValidSubmit">
     <DataAnnotationsValidator />
     <ValidationSummary />
-    <div class="form-group">
-        <label>Name:</label>
-        <div>
-            <InputText @bind-Value="@make.Name" class="form-control" />
-            <ValidationMessage For="@(() => make.Name)" />
+    <fieldset disabled="@Disabled">
+        <div class="form-group">
+            <label>Name:</label>
+            <div>
+                <InputText @bind-Value="@make.Name" class="form-control" />
+                <ValidationMessage For="@(() => make.Name)" />
+            </div>
         </div>
-    </div>
+    </fieldset>
 
-    <button type="submit" class="btn btn-success btn-block">@ButtonText</button>
+    @if (!Disabled)
+    {
+        <button type="submit" class="btn btn-success btn-block">@ButtonText</button>
+    }
+    <BackToList Target="makes"/>
 
 </EditForm>
 
 @code {
+    [Parameter]
+    public bool Disabled { get; set; }
     [Parameter]
     public Make make { get; set; }
     [Parameter]
