--- a/CarRentalManagement/Client/Pages/Models/FormComponent.razor
+++ b/CarRentalManagement/Client/Pages/Models/FormComponent.razor
@@ -1,19 +1,29 @@
 ﻿<EditForm Model="@model" OnValidSubmit="@OnValidSubmit">
     <DataAnnotationsValidator />
     <ValidationSummary />
-    <div class="form-group">
-        <label>Name:</label>
-        <div>
-            <InputText @bind-Value="@model.Name" class="form-control" />
-            <ValidationMessage For="@(() => model.Name)" />
+    <fieldset disabled="@Disabled">
+        <div class="form-group">
+            <label>Name:</label>
+            <div>
+                <InputText @bind-Value="@model.Name" class="form-control" />
+                <ValidationMessage For="@(() => model.Name)" />
+            </div>
         </div>
-    </div>
+    </fieldset>
 
-    <button type="submit" class="btn btn-success btn-block">Create</button>
+    
+    @if (!Disabled)
+    {
+        <button type="submit" class="btn btn-success btn-block">Create</button>
+    }
+    <BackToList Target="models"/>
 
 </EditForm>
 
 @code {
+
+    [Parameter]
+    public bool Disabled { get; set; } = false;
     [Parameter]
     public Model model { get; set; }
     [Parameter]
