--- a/CarRentalManagement/Client/Pages/Models/View.razor
+++ b/CarRentalManagement/Client/Pages/Models/View.razor
@@ -1,28 +1,21 @@
-﻿@page "/models/edit/{id:int}"
+﻿@page "/models/view/{id:int}"
 @using CarRentalManagement.Client.Services
 @inject NavigationManager _navigationManager
 @inject HttpClient _client
 @inject HttpInterceptorService _interceptor;
-
-<FormComponent model="@model" OnValidSubmit="@EditMake" ButtonText="Edit"/>
+<FormComponent model="@model" Disabled="true"/>
 
 
 @code {
+
     [Parameter]
     public int id { get; set; }
     Model model = new Model();
 
-    
     protected override async Task OnParametersSetAsync()
     {
         _interceptor.MonitorEvent();
         model = await _client.GetFromJsonAsync<Model>($"{Endpoints.ModelsEndpoint}/{id}");
     }
 
-    async Task EditMake()
-    {
-        _interceptor.MonitorEvent();
-        await _client.PutAsJsonAsync($"{Endpoints.ModelsEndpoint}/{id}", model);
-        _navigationManager.NavigateTo("/models/");
-    }
 }
