--- a/CarRentalManagement/Client/Pages/Vehicles/Create.razor
+++ b/CarRentalManagement/Client/Pages/Vehicles/Create.razor
@@ -1,13 +1,13 @@
 ﻿@page "/vehicles/create/"
+@using CarRentalManagement.Client.Services
 @inject HttpClient _client
 @inject NavigationManager _navigationManager
+@inject HttpInterceptorService _interceptor;
 
-<h3 class="card-title">Create New Vehicle</h3>
-<hr />
-<br />
+<HeadingComponent Text="Create New Vehicle"/>
+
 
 <FormComponent vehicle="@vehicle" OnValidSubmit="@CreateVehicle" ButtonText="Create"/>
-<BackToList Target="vehicles"></BackToList>
 
 @code {
     Vehicle vehicle = new Vehicle();
@@ -15,6 +15,7 @@
 
     private async Task CreateVehicle()
     {
+        _interceptor.MonitorEvent();
         await _client.PostAsJsonAsync(Endpoints.VehiclesEndpoint, vehicle);
         _navigationManager.NavigateTo("/vehicles/");
     }
