--- a/CarRentalManagement/Client/Pages/Vehicles/Index.razor
+++ b/CarRentalManagement/Client/Pages/Vehicles/Index.razor
@@ -1,12 +1,12 @@
 ﻿@inject IJSRuntime js
 @page "/vehicles/"
-@using System.Net
+@using CarRentalManagement.Client.Services
+@inject HttpInterceptorService _interceptor;
 
 @attribute [Authorize]
 @inject HttpClient _client
-<h3 class="card-title">Vehicles</h3>
-<hr />
-<br />
+<HeadingComponent Text="Vehicles"/>
+
 
 <a href="/vehicles/create" class="btn btn-dark">
     <span class="oi oi-plus"></span>
@@ -61,6 +61,7 @@ else
     private List<Vehicle> Vehicles;
     protected override async Task OnInitializedAsync()
     {
+        _interceptor.MonitorEvent();
         Vehicles = await _client.GetFromJsonAsync<List<Vehicle>>(Endpoints.VehiclesEndpoint);
     }
 
@@ -71,6 +72,7 @@ else
         var confirm = await js.InvokeAsync<bool>("confirm", $"Do you want to delete {make.Vin}?");
         if (confirm)
         {
+            _interceptor.MonitorEvent();
             await _client.DeleteAsync($"{Endpoints.VehiclesEndpoint}/{id}");
             Vehicles.Remove(make);
             //await OnInitializedAsync();
